# diuyin-video-downliad

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  agentdb.rvf  docker-compose.prod.yml  docker-compose.yml  install.sh  nginx.conf  pyproject.toml  pytest.ini  ruvector.db
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/fix/: URL_NORMALIZE_PLAN.md  extractor-fix-plan.md
docs/spec/: TDD-BDD-開發計畫.md
docs/superpowers/plans/: 2026-05-15-extractor-fix-plan.md  2026-05-15-fastapi-docker-implementation.md
docs/superpowers/specs/: 2026-05-15-extractor-fix-design.md  2026-05-15-fastapi-docker-design.md
features/: api.feature  conftest.py  download.feature  extractor.feature
features/steps/: api_steps.py  cli_steps.py  download_steps.py  extractor_steps.py
scripts/: changelog.sh  release.sh  version-bump.sh
src/douyin_download/: __init__.py  api.py  cli.py  config.py  core.py  extractor.py  models.py  tasks.py  url_normalizer.py
tests/: cli.feature  conftest.py  extractor.feature  test_api.py  test_bdd_integration.py  test_cli.py  test_core.py  test_extractor_unit.py  test_models.py  test_tasks.py  test_url_normalizer.py  test_url_normalizer_bdd.py
