[project]
name = "douyin-download"
version = "0.1.0"
description = "Download Douyin videos using Playwright"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50.0",
    "curl-cffi>=0.7.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=4.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
douyin = "douyin_download.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests", "features"]
bdd_features_base_dir = "features"
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-bdd>=4.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
